--- a/packages/app/public/index.html
+++ b/packages/app/public/index.html
@@ -39,8 +39,7 @@
     />
     <link
       rel="mask-icon"
-      href="<%= publicPath %>/safari-pinned-tab.svg"
-      color="#5bbad5"
+      href="<%= publicPath %>/eco.png"
     />
     <title><%= config.getString('app.title') %></title>
   </head>
